--- a/frontend/src/assets/styles/_variables.scss
+++ b/frontend/src/assets/styles/_variables.scss
@@ -4,11 +4,13 @@ $tablet: 768px;
 $desktop: 1024px;
 $hugeScreen: 1280px;
 $maxScreen: 1440px;
+$xxl: 1600px;
 
 $scroll-width: 6px;
 
 $padding-standard: 16px;
 $desktop-margin: 7vw;
+$desktop-margin-huge: 12vw;
 
 $view-padding-top: 100px;
 $view-padding-top-mobile: 100px;
